--- a/src/app/feed-home/feed-home.component.html
+++ b/src/app/feed-home/feed-home.component.html
@@ -8,7 +8,7 @@
       {{post.author.fullName}}
     </div>
     <div class="card-body">
-      <div [innerHTML]="post.content | emojis"></div>
+      <div [innerHTML]="post.content"></div>
       <button *ngIf="canVote(post.author._id, post.reputation.voters)" (click)="upvote(post._id)">+</button>
       <button *ngIf="canVote(post.author._id, post.reputation.voters)" (click)="downvote(post._id)">-</button>
     </div>
