--- a/src/app/feed-my-profile/feed-my-profile.component.html
+++ b/src/app/feed-my-profile/feed-my-profile.component.html
@@ -9,7 +9,7 @@
         <div>
           +{{post.reputation.upvotes}} / -{{post.reputation.downvotes}}
         </div>
-        <div [innerHTML]="post.content | emojis"></div>
+        <div [innerHTML]="post.content"></div>
         <div class="font-italic">
           {{post.createdOn}}
         </div>
