--- a/src/app/flux/feed-home/feed-home.component.html
+++ b/src/app/flux/feed-home/feed-home.component.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <div *ngFor="let post of feed$ | async">
   <div class="row">
-    <div class="col-3" [ngClass]="getPostTypeStyle(post.type)">
+    <div class="col-3" [ngClass]="postService.getPostTypeStyle(post.type)">
       +{{post.reputation.upvotes}}
       -{{post.reputation.downvotes}}
       {{post.createdOn}}
