--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -47,7 +47,7 @@
         <div class="col-6">
           <div class="block">
             <h3 class="modum text-center">
-              Feel at home
+              Feel at flux
               <span class="clickit" (click)="feel=!feel;" *ngIf="!feel">+</span>
               <span class="clickit" (click)="feel=!feel;" *ngIf="feel">x</span>
               <small><== Click me !</small>
@@ -109,7 +109,7 @@
                 Here in Echo, you will find comforting having the choice between being under the spotlight and working from the shadows.
               </p>
               <p>
-                We understand and respect your choice, click this <a routerLink='/home'>link</a> and we will grant you an anonymous account. Find below the specifities between a "pub" and an "ano" :
+                We understand and respect your choice, click this <a routerLink='/flux'>link</a> and we will grant you an anonymous account. Find below the specifities between a "pub" and an "ano" :
               </p>
               <div class="container-fluid">
                 <table class="table table-striped table-hover">
