--- a/src/app/flux/flux.component.html
+++ b/src/app/flux/flux.component.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <div class="container-fluid content">
   <app-header></app-header>
-  <app-feed-home></app-feed-home>
+  <app-feed></app-feed>
   <app-footer></app-footer>
 </div>
