--- a/src/app/trusts/trust/trust.component.html
+++ b/src/app/trusts/trust/trust.component.html
@@ -9,7 +9,7 @@
   <div class="row">
     <div class="col-1 p-0 navbar">
       <div class="w-100">
-        <button (click)="toggle('home');">Home</button>
+        <button (click)="toggle('home');">Flux</button>
       </div>
       <div class="w-100">
         <button (click)="toggle('members');">Members</button>
