--- a/src/app/user/my-profile/my-profile.component.html
+++ b/src/app/user/my-profile/my-profile.component.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<div class="container-fluid p-0 content">
+<div class="container-fluid content">
   <app-header></app-header>
   <div class="row">
     <div class="col-4"><img class="w-100" src="/assets/img/profile.png">
