--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,24 +1,20 @@
 @import './../../core/global.scss';
 
 nav {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  color: white;
-  background-color: #292522;
-  z-index: 1;
-  .board {
-    border-radius: 15px;
-    background-color: rgb(218, 241, 244);
-    input {
-      font-size: 12px;
+  .header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 90%;
+    margin: 2% auto;
+    z-index: 1;
+    .banner {
+      border-radius: 20px;
+      background-color: white;
     }
-    img {
-      cursor: pointer;
-      width: 38px;
-      height: 38px;
+    app-flux-box {
+      width: 100%;
     }
-
   }
 }
